<resources>
    <string name="app_name">新松</string>
    <string name="app_welcome">欢迎使用新松关怀！</string>
    <!-- app相关-->
    <string name="app_intro">APP说明</string>
    <string name="version_intro">版本说明</string>
    <!-- -->
    <string name="xxx">XXXXXXXXXX</string>
    <string name="custom">自定义</string>

    <!-- 第三方-->
    <string name="weibo">微博</string>
    <string name="qq">QQ</string>
    <string name="weixin">微信</string>
    <!-- 底部菜单-->
    <string name="weather">天气</string>
    <string name="scene">时景</string>
    <string name="rank">排名</string>
    <string name="me">我</string>
    <!-- 功能按键-->
    <string name="start">一键启动</string>
    <string name="anion">负离子</string>
    <string name="auto">自动</string>
    <string name="dehumidificate">除湿</string>
    <string name="humidificate">加湿</string>
    <string name="netion">净离子</string>
    <string name="newwind">新风</string>
    <string name="purified">净化量</string>
    <string name="silent">静音</string>
    <string name="swing">摆风</string>
    <string name="timer">定时</string>
    <string name="ultraviolet">紫外线光触媒</string>
    <string name="warmwind">暖风</string>
    <!-- user info -->
    <string name="phone_number">手机号码</string>
    <string name="password">密码</string>
    <string name="nickname">昵称</string>
    <string name="name">姓名</string>
    <string name="id_card">身份证号</string>
    <string name="birthday">出生日期</string>
    <string name="sex">性别</string>
    <string name="profession">职业</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <!-- 操作 -->
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="code">验证码</string>
    <string name="sure">确定</string>
    <string name="send">发送</string>
    <string name="commit">提交</string>
    <string name="next">下一步</string>
    <string name="delete">删除</string>
    <!--device info-->
    <string name="device_name">设备名称</string>
    <string name="device_code">设备编码</string>
    <string name="account_premit">账号权限</string>
    <string name="device_scene">设备场景</string>
    <string name="scene_upload">场景上传</string>
    <string name="use_target">使用对象</string>
    <string name="use_environment">使用环境</string>
    <string name="use_area">使用面积</string>
    <string name="use_city">使用城市</string>
    <string name="permitted_account">授权账户</string>
    <!-- 设备场景 -->
    <string name="bed_room">卧室</string>
    <string name="living_room">客厅</string>
    <string name="office_room">办公室</string>
    <string name="conference_room">会议室</string>
    <string name="hall">大厅</string>
    <string name="class_room">教室</string>
    <!-- 使用对象-->
    <string name="parent">父母</string>
    <string name="child">孩子</string>
    <string name="colleague">同事</string>
    <string name="baby">婴儿</string>
    <string name="gravida">孕妇</string>
    <string name="aged">老人</string>
    <!-- 使用环境-->
    <string name="normal_envi">普通环境</string>
    <string name="light_polution">轻度污染</string>
    <string name="medium_polution">中度污染</string>
    <string name="heavy_polution">重度污染</string>
    <!-- 使用面积-->
    <string name="area0_10">0-10m²</string>
    <string name="area10_20">10-20m²</string>
    <string name="area20_30">20-30m²</string>
    <string name="area30_40">30-40m²</string>
    <string name="area40_50">40-50m²</string>
    <string name="area50_60">50-60m²</string>

    <!--设备管理-->

    <string name="device">设备</string>
    <string name="device_manage">设备管理</string>
    <string name="my_device">我的设备</string>
    <string name="add_device">添加设备</string>
    <string name="add_machine">添加机器</string>
    <string name="del_device">删除设备</string>
    <!-- 权限管理-->
    <string name="permit_level1">一级权限</string>
    <string name="permit_level2">二级权限</string>
    <string name="permit_level3">三级权限</string>
    <string name="unauth">未授权</string>
    <string name="apply_permission">申请权限</string>
    <string name="del_permission">删除授权</string>
    <!-- 服务-->
    <string name="product_service">产品服务</string>
    <string name="my_service">我的服务</string>
    <string name="apply_service">申请服务</string>
    <string name="waiting">等待处理</string>
    <string name="doing">处理中</string>
    <string name="done">处理完成</string>
    <string name="service_number">服务编号</string>
    <string name="service_query">服务查询</string>
    <string name="complain_or_advice">投诉建议</string>
    <!-- 报修-->
    <string name="fault_repair">故障报修</string>
    <string name="change_filter_screen">更换滤网</string>
    <string name="machine_clean">机器清洗</string>
    <string name="comprehensive_service">综合服务</string>
    <!-- 故障-->
<string name="fault_type">故障类型</string>
    <string name="fault_describe">故障描述</string>
    <!-- 账号管理 -->
    <string name="input_info">完善信息</string>
    <string name="change_password">修改密码</string>
    <string name="credit_query">积分查询</string>
    <string name="credit_obtain">获取积分</string>
    <string name="correlation_account">关联账户</string>
    
    <!-- 订单管理-->
    <string name="my_order">我的订单</string>
    <string name="order_number">订单编号</string>
    <string name="order_done">订单已处理</string>
    <string name="order_send">快件已发出</string>
    <!-- 产品商店-->
    <string name="product_store">产品商店</string>
    <!-- -->
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- credit task-->
    <string name="daily_task">每日任务</string>
    <string name="accumulative_task">累计任务</string>
    <string name="normal_task">常规任务</string>
    <string name="check_in">签到</string>
    <string name="share_scene">分享时景</string>
    <string name="daily_like">每日点赞</string>
    <string name="daily_comment">每日评论</string>
    <string name="share_to_friends">分享朋友圈</string>
    <string name="perfect_info">完善账号信息</string>
    <string name="upload_avatar">上传头像</string>
    <string name="select_city">选择城市</string>
</resources>
