<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin">

        <TableRow android:layout_weight="30"></TableRow>

        <include layout="@layout/line" />

        <TableRow android:layout_weight="54">

            <TextView
                style="@style/NormalTxt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="570"
                android:text="@string/parent" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="65"
                android:adjustViewBounds="true"
                android:src="@drawable/clicked"
                android:visibility="visible" />
        </TableRow>

        <include layout="@layout/line" />

        <TableRow android:layout_weight="54">

            <TextView
                style="@style/NormalTxt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="570"
                android:text="@string/child" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="65"
                android:adjustViewBounds="true"
                android:src="@drawable/clicked"
                android:visibility="visible" />
        </TableRow>

        <include layout="@layout/line" />

        <TableRow android:layout_weight="54">

            <TextView
                style="@style/NormalTxt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="570"
                android:text="@string/colleague" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="65"
                android:adjustViewBounds="true"
                android:src="@drawable/clicked"
                android:visibility="visible" />
        </TableRow>

        <include layout="@layout/line" />

        <TableRow android:layout_weight="54">

            <TextView
                style="@style/NormalTxt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="570"
                android:text="@string/baby" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="65"
                android:adjustViewBounds="true"
                android:src="@drawable/clicked"
                android:visibility="visible" />
        </TableRow>

        <include layout="@layout/line" />

        <TableRow android:layout_weight="54">

            <TextView
                style="@style/NormalTxt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="570"
                android:text="@string/gravida" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="65"
                android:adjustViewBounds="true"
                android:src="@drawable/clicked"
                android:visibility="visible" />
        </TableRow>

        <include layout="@layout/line" />

        <TableRow android:layout_weight="54">

            <TextView
                style="@style/NormalTxt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="570"
                android:text="@string/aged" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="65"
                android:adjustViewBounds="true"
                android:src="@drawable/clicked"
                android:visibility="visible" />
        </TableRow>

        <include layout="@layout/line" />

        <TableRow android:layout_weight="54">

            <TextView
                style="@style/NormalTxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/custom" />

            <EditText
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:singleLine="true" />
        </TableRow>

        <include layout="@layout/line" />

        <TableRow android:layout_weight="270" />

        <TableRow android:layout_weight="84">

            <Button
                style="@style/Btn"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sure" />
        </TableRow>

        <TableRow android:layout_weight="88" />
    </TableLayout>
</LinearLayout>