<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90"
            style="@style/NormalTxt"
            android:paddingLeft="@dimen/padding_16dp"
            android:paddingRight="@dimen/padding_16dp"
            android:drawableRight="@drawable/preview"
            android:text="@string/fault_repair"/>

        <include
            layout="@layout/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90"
            style="@style/NormalTxt"
            android:paddingLeft="@dimen/padding_16dp"
            android:paddingRight="@dimen/padding_16dp"
            android:drawableRight="@drawable/preview"
            android:text="@string/change_filter_screen"/>
        <include
            layout="@layout/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90"
            style="@style/NormalTxt"
            android:paddingLeft="@dimen/padding_16dp"
            android:paddingRight="@dimen/padding_16dp"
            android:drawableRight="@drawable/preview"
            android:text="@string/machine_clean"/>
        <include
            layout="@layout/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90"
            style="@style/NormalTxt"
            android:paddingLeft="@dimen/padding_16dp"
            android:paddingRight="@dimen/padding_16dp"
            android:drawableRight="@drawable/preview"
            android:text="@string/comprehensive_service"/>
        <include
            layout="@layout/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="280" />
        <Button
            style="@style/Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/commit"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="436" />

    </LinearLayout>
</LinearLayout>